Updated HTML Content

--- a/index.html
+++ b/index.html
@@ -87,24 +87,152 @@
 
       <div class="features__section">
         <h3 class="title">Sync Across All Devices</h3>
-        <p class="desc">Everything you need to make your business grow <span>super fast!</span></p>
+        <p class="desc">
+          Everything you need to make your business grow
+          <span>super fast!</span>
+        </p>
+
+        <!-- Feature Container -->
+
         <div class="feature__container">
-            <div class="content__section">
-                <img src="./img/5e4b18d10b25ed985b4d747a_Metric-screenshot2.png" alt="">
-                <div class="content">
-                    <i class="fa-solid fa-laptop"></i>
-                    <h4 class="title">Web Application</h4>
-                    <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, repellendus dolores voluptatum corporis eius ducimus aut, et quae officia voluptatibus repudiandae provident, sit consequuntur unde!</p>
-                </div>
+          <div class="content__section">
+            <img
+              src="./img/5e4b18d10b25ed985b4d747a_Metric-screenshot2.png"
+              alt=""
+            />
+            <div class="content">
+              <i class="fa-solid fa-laptop"></i>
+              <h4 class="title">Web Application</h4>
+              <p class="desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, repellendus dolores voluptatum corporis eius ducimus
+                aut, et quae officia voluptatibus repudiandae provident, sit
+                consequuntur unde!
+              </p>
             </div>
-            <div class="content__section">
-                <img src="./img/5e4b18d10b25ed61054d7490_Metric-screenshot-phone-p-800x389.png" alt="">
-                <div class="content">
-                   <i class="fa-solid fa-cloud-arrow-down"></i>
-                    <h4 class="title">Mobile App</h4>
-                    <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, repellendus dolores voluptatum corporis eius ducimus aut, et quae officia voluptatibus repudiandae provident, sit consequuntur unde!</p>
-                </div>
+          </div>
+          <div class="content__section">
+            <img
+              src="./img/5e4b18d10b25ed61054d7490_Metric-screenshot-phone-p-800x389.png"
+              alt=""
+            />
+            <div class="content">
+              <i class="fa-solid fa-cloud-arrow-down"></i>
+              <h4 class="title">Mobile App</h4>
+              <p class="desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, repellendus dolores voluptatum corporis eius ducimus
+                aut, et quae officia voluptatibus repudiandae provident, sit
+                consequuntur unde!
+              </p>
             </div>
+          </div>
+        </div>
+
+        <!-- Feature Highlights Container -->
+        <div class="feature__highlights__container">
+          <div class="feature__highlights">
+            <img src="./img/dashboard.svg" alt="Dashboard Logo" class="logo" />
+            <h4 class="title">Dashboard</h4>
+            <p class="desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum
+              quisquam aspernatur cupiditate sequi necessitatibus nesciunt?
+            </p>
+          </div>
+          <div class="feature__highlights">
+            <img
+              src="./img/customRules.svg"
+              alt="Dashboard Logo"
+              class="logo"
+            />
+            <h4 class="title">Custom Rules</h4>
+            <p class="desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum
+              quisquam aspernatur cupiditate sequi necessitatibus nesciunt?
+            </p>
+          </div>
+          <div class="feature__highlights">
+            <img src="./img/presets.svg" alt="Dashboard Logo" class="logo" />
+            <h4 class="title">Presets</h4>
+            <p class="desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum
+              quisquam aspernatur cupiditate sequi necessitatibus nesciunt?
+            </p>
+          </div>
+          <div class="feature__highlights">
+            <img src="./img/metrics.svg" alt="Dashboard Logo" class="logo" />
+            <h4 class="title">Metrics</h4>
+            <p class="desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum
+              quisquam aspernatur cupiditate sequi necessitatibus nesciunt?
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Plans & Pricing Section -->
+
+      <div class="plans__section">
+        <h2 class="title">Plans & Pricing</h2>
+        <p class="desc">
+          No credit card required. No risk,
+          <span>30-day money back guarantee!</span>
+        </p>
+        <div class="plans">
+          <div class="plan">
+            <div class="title">Starter</div>
+            <p class="pricing"><span>$15</span> /month</p>
+            <p class="pricing"><span>500</span> Data Points</p>
+            <p class="pricing"><span>1</span> Team Member</p>
+            <hr />
+            <p class="desc"><span>Email</span> Support</p>
+            <p class="desc not__available">IOS and Android App</p>
+            <p class="desc not__available">Customizable Dashboard</p>
+            <p class="desc not__available">Metric API</p>
+            <button class="plan__btn">Choose Plan</button>
+          </div>
+          <div class="plan">
+            <div class="title">Professional</div>
+            <p class="pricing"><span>$30</span> /month</p>
+            <p class="pricing"><span>2000</span> Data Points</p>
+            <p class="pricing"><span>1</span> Team Member</p>
+
+            <hr />
+
+            <p class="desc"><span>Email</span> Support</p>
+            <p class="desc">IOS and Android App</p>
+            <p class="desc not__available">Customizable Dashboard</p>
+            <p class="desc not__available">Metric API</p>
+            <button class="plan__btn">Choose Plan</button>
+          </div>
+          <div class="plan">
+            <div class="title">Startup</div>
+            <p class="pricing"><span>$75</span> /month</span></p>
+            <p class="pricing"><span>5000</span> Data Points</p>
+            <p class="pricing"><span>3</span> Team Member</p>
+            <hr />
+
+            <p class="desc"><span>Email</span> Support</p>
+            <p class="desc">IOS and Android App</p>
+            <p class="desc">Customizable Dashboard</p>
+            <p class="desc not__available">Metric API</p>
+            <button class="plan__btn">Choose Plan</button>
+          </div>
+          <div class="plan">
+            <div class="title">Business</div>
+            <p class="pricing"><span>$250</span> /month</p>
+            <p class="pricing"><span>15000</span> Data Points</p>
+            <p class="pricing"><span>10</span>
+             Team Member</p>
+
+            <hr />
+
+            <p class="desc"><span>Email</span> Support</p>
+            <p class="desc">IOS and Android App</p>
+            <p class="desc">Customizable Dashboard</p>
+            <p class="desc">Metric API</p>
+            <button class="plan__btn">Choose Plan</button>
+          </div>
         </div>
       </div>
     </div>
