updated HTML template

--- a/index.html
+++ b/index.html
@@ -235,6 +235,70 @@
           </div>
         </div>
       </div>
+
+      <!-- Testimonials Section -->
+
+      <div class="testimonials__container"></div>
+
+      <!-- Clients Section -->
+
+      <div class="client_section__container">
+        <div class="layout_overlay">
+          <img src="./img/5e4b18d10b25ed71464d745d_client_logo_johnson_and_johnson.png" alt="" class="overlay__img">
+          <img src="./img/5e4b18d10b25edbea24d746b_client_logo_tesla.png" alt="" class="overlay__img">
+          <img src="./img/5e4b18d10b25ed4cd14d7488_client_logo_ouya.png" alt="" class="overlay__img">
+          <img src="./img/5e4b18d10b25ed10654d7470_client_logo_chartboost.png" alt="" class="overlay__img">
+          <img src="./img/5e4b18d10b25ed6db74d746a_client_logo_mammoth.png" alt="" class="overlay__img">
+          <img src="./img/5e4b18d10b25ed67f74d7461_client_logo_neutrogena.png" alt="" class="overlay__img">
+            
+        </div>
+      </div>
+
+      <!-- Footer Section  -->
+
+      <div class="footer_section__container">
+        <div class="main__container">
+          <div class="container__1">
+            <h1 class="title">Metric</h1>
+            <p class="desc">Sign up for our newsletter</p>
+            <input type="email" placeholder=" Email Address" name="email" id="email" class="email">
+            <input type="submit" value="Subscribe" class="subscribe__btn">
+            <!-- <button class="subscribe__btn">Subscribe</button> -->
+            <br>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-regular fa-envelope"></i>
+          </div>
+
+          <div class="container__2">
+            <h2 class="title">Company</h2>
+            <ul class="items">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Clients</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Sign Up</a></li>
+            </ul>
+          </div>
+          <div class="container__2">
+            <h2 class="title">Product</h2>
+            <ul class="items">
+              <li><a href="#">Analytics</a></li>
+              <li><a href="#">Businesses</a></li>
+              <li><a href="#">Testimonials</a></li>
+              <li><a href="#">integrations</a></li>
+            </ul>
+          </div>
+          <div class="container__2">
+            <h2 class="title">Legal</h2>
+            <ul class="items">
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms of Use</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
